fix: modal关闭按钮问题
Change-Id: Ic637eb4d475ece8f408901f3c9c4b95aa9bb59b9

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -117,6 +117,7 @@
 @modal-footer-padding-vertical: 15px;
 @modal-footer-padding-horizontal: 20px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
+@modal-header-close-size: var(--modal-header-close-size);
 
 // Drawer
 @drawer-header-padding: 20px;
