fix: tooltip popover 箭头阴影调整
Change-Id: I170081f3a04936a4d90e4c7ff1f8af88201115b8

--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -12,6 +12,11 @@
     .@{ant-prefix}-popover-content {
         max-width: 400px;
         word-break: break-all;
+
+        .@{ant-prefix}-popover-arrow-content {
+            // ref: https://github.com/ant-design/ant-design/pull/33710
+            box-shadow: 2px 2px 5px #00000012;
+        }
     }
 
     .@{ant-prefix}-popover-title {
