--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -22,7 +22,7 @@
     &.@{ant-prefix}-tooltip-placement-bottomLeft .@{ant-prefix}-tooltip-arrow,
     &.@{ant-prefix}-tooltip-placement-bottomRight .@{ant-prefix}-tooltip-arrow {
         &-content {
-            box-shadow: none;
+            box-shadow: 2px 2px 5px #00000012;
         }
     }
 }
