fix: [acud]调整gray颜色
Change-Id: Ieaa62f8ca30ccc2be8c51dadc5396d57d29b1ac6

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -90,13 +90,16 @@
 
                 // 作为第一个input时的border，如search
                 .@{ant-prefix}-input-search-button {
+                    background: var(--color-gray-3);
                     border: 1px solid var(--theme-border-color-disabled);
+                    border-left: 0;
                 }
             }
 
-            input:first-child,
             .@{ant-prefix}-input-search-button {
-                border-color: var(--theme-border-color-disabled) !important;
+                background: var(--color-gray-3);
+                border-color: var(--theme-border-color-disabled);
+                border-left: 0;
             }
         }
 
