fix: [acud]调整gray颜色
Change-Id: I4e8c556b3de48857388953f9144f776d936637ad

--- a/packages/ui/cascader/src/index.less
+++ b/packages/ui/cascader/src/index.less
@@ -39,7 +39,7 @@
         }
 
         .@{ant-prefix}-cascader-menu-item:not(.@{ant-prefix}-cascader-menu-item-disabled):hover {
-            background-color: var(--color-gray-3);
+            background-color: var(--color-brand-1);
         }
 
         .@{ant-prefix}-cascader-menu-item-active:not(.@{ant-prefix}-cascader-menu-item-disabled),
@@ -54,7 +54,7 @@
         .@{ant-prefix}-cascader-menu-item-expand .@{ant-prefix}-cascader-menu-item-expand-icon,
         .@{ant-prefix}-cascader-menu-item-loading-icon {
             right: 7px;
-            color: var(--color-gray-6);
+            color: var(--theme-icon-color);
             font-size: 14px;
         }
     }
