--- a/packages/ui/popover/src/index.less
+++ b/packages/ui/popover/src/index.less
@@ -15,7 +15,7 @@
 
         .@{ant-prefix}-popover-arrow-content {
             // ref: https://github.com/ant-design/ant-design/pull/33710
-            box-shadow: 2px 2px 5px #00000012;
+            box-shadow: var(--tooltip-arrow-content-box-shadow);
         }
     }
 
