--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -22,7 +22,13 @@
     &.@{ant-prefix}-tooltip-placement-bottomLeft .@{ant-prefix}-tooltip-arrow,
     &.@{ant-prefix}-tooltip-placement-bottomRight .@{ant-prefix}-tooltip-arrow {
         &-content {
-            box-shadow: 2px 2px 5px #00000012;
+            box-shadow: var(--tooltip-arrow-content-box-shadow);
         }
     }
+}
+
+// 当其他组件内置了tooltip是，全局覆盖
+// Global
+.@{ant-prefix}-tooltip-arrow-content {
+    box-shadow: var(--tooltip-arrow-content-box-shadow, 'none') !important;
 }
