fix: [acud] modal调整
Change-Id: I89cf3e5b02830d5914fb46b43da31a4f9054173a

--- a/packages/ui/input/src/index.less
+++ b/packages/ui/input/src/index.less
@@ -101,6 +101,11 @@
                 border-color: var(--theme-border-color-disabled);
                 border-left: 0;
             }
+
+            // group disable时select边框
+            .osui-select.@{ant-prefix}-select-disabled .@{ant-prefix}-select-selector {
+                border: none;
+            }
         }
 
         &,
