--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -118,6 +118,7 @@
 @modal-footer-padding-horizontal: 20px;
 @modal-confirm-body-padding: 40px 30px 15px 30px;
 @modal-header-close-size: var(--modal-header-close-size);
+@modal-header-title-font-size: 14px;
 
 // Drawer
 @drawer-header-padding: 20px;
