fix: [acud] Drawer调整
Change-Id: I36d37d2a6e5b82afacc3f311b295e46ceee3e7c1

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -119,10 +119,12 @@
 @modal-confirm-title-font-size: 14px;
 
 // Drawer
-@drawer-header-padding: 20px;
-@drawer-body-padding: 20px;
-@drawer-footer-padding-vertical: 10px;
-@drawer-footer-padding-horizontal: 20px;
+@drawer-header-padding: 16px 24px;
+@drawer-body-padding: 24px;
+@drawer-footer-padding-vertical: 16px;
+@drawer-footer-padding-horizontal: 24px;
+@drawer-title-font-size: var(--drawer-title-font-size);
+@drawer-title-line-height: 24px;
 
 // Timeline
 @timeline-width: 1px;
