--- a/packages/ui/drawer/src/index.less
+++ b/packages/ui/drawer/src/index.less
@@ -11,8 +11,6 @@
     }
 
     .@{ant-prefix}-drawer-header {
-        border-bottom: 1px solid transparent;
-
         .@{ant-prefix}-drawer-header-title {
             // 把关闭按钮挪到右边去
             .@{ant-prefix}-drawer-close {
@@ -20,19 +18,14 @@
                 right: 0;
             }
         }
-
-        .@{ant-prefix}-drawer-title {
-            font-size: var(--drawer-title-font-size);
-        }
     }
 
     .@{ant-prefix}-drawer-footer {
-        // TODO: antd修复这个issue https://github.com/ant-design/ant-design/pull/28975 后换成变量
-        padding: 10px 20px;
         border-top: 1px solid var(--drawer-footer-border-top-color);
     }
 
     .@{ant-prefix}-drawer-close {
+        margin-right: 14px;
         color: var(--theme-icon-color);
         line-height: var(--drawer-close-icon-line-height);
     }
