fix: [acud] Alert调整
Change-Id: Ia9c5a26c33de0438798235ce6b0163c2482408b9

--- a/packages/ui/alert/src/index.less
+++ b/packages/ui/alert/src/index.less
@@ -3,6 +3,7 @@
 .@{osui-alert-class-prefix} {
     display: flex;
     align-items: center;
+    line-height: 24px;
 
     .@{ant-prefix}-alert-close-icon {
         height: 14px;
@@ -19,8 +20,8 @@
 
     .@{ant-prefix}-alert-icon {
         position: absolute;
-        top: 9px;
-        left: 16px;
+        top: 8px;
+        left: 14px;
     }
 
     &.@{ant-prefix}-alert-with-description {
@@ -71,15 +72,26 @@
         }
 
         &-actions {
+            display: flex;
+
             & > *:not(:last-child) {
                 margin-right: 20px;
             }
         }
     }
 
-    &-action-expand-open {
+    &-action-expand {
+        display: flex;
+
         svg {
-            transform: rotate(180deg);
+            margin-top: 4px;
+        }
+
+        &-open {
+            svg {
+                // 不能用align-items center，因为会跑到中间去
+                transform: rotate(180deg);
+            }
         }
     }
 
