fix: arrow的黑色阴影换回用fade(@black), @black @white 不用css vars
Change-Id: I3bc46f0fd6f1d167892214f138b95ac54fe7247e

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -191,7 +191,7 @@
 @background-color-light: var(--background-color-light);
 @badge-color: var(--badge-color);
 @badge-text-color: var(--badge-text-color);
-@black: var(--black);
+@black: #000;
 @body-background: var(--body-background);
 @border-color-base: var(--border-color-base);
 @border-color-inverse: var(--border-color-inverse);
@@ -500,4 +500,4 @@
 @warning-color-hover: var(--warning-color-hover);
 @warning-color-outline: var(--warning-color-outline);
 @warning-color: var(--warning-color);
-@white: var(--white);
+@white: #fff;
