fix: 修复arrow-border-radius导致编译不通过的问题
Change-Id: Ia70c75940b5e50b5552c79fb786c9314deb6e21b

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -16,6 +16,7 @@
 
 @border-radius-base: var(--border-radius-3);
 @border-radius-sm: var(--border-radius-2);
+@arrow-border-radius: 2px;
 
 @height-base: 30px;
 @height-lg: 40px;
