--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -14,8 +14,9 @@
 
 @line-height-base: 1.5;
 
-@border-radius-base: 0;
-@border-radius-sm: 0;
+@border-radius-base: var(--border-radius-3);
+@border-radius-sm: var(--border-radius-2);
+@arrow-border-radius: 2px;
 
 @height-base: 30px;
 @height-lg: 40px;
