--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -14,8 +14,8 @@
 
 @line-height-base: 1.5;
 
-@border-radius-base: var(--border-radius-3);
-@border-radius-sm: var(--border-radius-2);
+@border-radius-base: var(--border-radius-base);
+@border-radius-sm: var(--border-radius-sm);
 @arrow-border-radius: 2px;
 
 @height-base: 30px;
