fix: less function fadeout

--- a/packages/ui-theme/icloud-theme/patches/less-functions-overrides.less
+++ b/packages/ui-theme/icloud-theme/patches/less-functions-overrides.less
@@ -43,6 +43,9 @@
     .fadein(@color, @percentage: 100%) {
         return: @color;
     }
+    .fadeout(@color, @percentage: 100%) {
+        return: @color;
+    }
 }
 // === endof less mixin overrides ===
 
