--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -7,5 +7,6 @@
 
     .@{ant-prefix}-tooltip-inner {
         min-height: var(--tooltip-min-height);
+        padding: var(--tooltip-inner-padding);
     }
 }
