fix: 修复一波样式调整
Change-Id: I19885e3b710455d575a4c74065baf2b0435da9df

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -37,7 +37,7 @@
 @input-height-sm: @height-sm;
 @input-height-base: @height-base;
 @input-height-lg: @height-lg;
-@input-padding-horizontal: 8px;
+@input-padding-horizontal: 12px;
 
 // Table
 @table-font-size: @font-size-sm;
@@ -166,6 +166,9 @@
 
 // Checkbox
 @checkbox-border-radius: var(--checkbox-border-radius);
+
+// Message
+@message-notice-content-padding: var(--message-notice-content-padding);
 
 // 所有的颜色变量map到css vars
 @alert-close-color: var(--alert-close-color);
