--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -57,7 +57,7 @@
 
     .@{ant-prefix}-form-item-extra {
         margin-top: 8px;
-        color: var(--theme-placeholder-color);
+        color: var(--form-item-extra-color);
         font-size: 12px;
     }
 
