--- a/packages/ui/pagination/src/index.less
+++ b/packages/ui/pagination/src/index.less
@@ -132,6 +132,7 @@
     // Go button 样式
     .@{ant-prefix}-pagination-options-quick-jumper {
         display: inline-flex;
+        margin-left: var(--pagination-quick-jumper-margin-left, 0);
 
         input {
             &:focus,
