fix: tooltip默认支持v1的变量
Change-Id: I9fed368cf479e92909b7c6cc915501a803e5f81b

--- a/packages/ui/tooltip/src/index.less
+++ b/packages/ui/tooltip/src/index.less
@@ -7,6 +7,6 @@
 
     .@{ant-prefix}-tooltip-inner {
         min-height: var(--tooltip-min-height);
-        padding: var(--tooltip-inner-padding);
+        padding: var(--tooltip-inner-padding, 6px 8px);
     }
 }
