--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -61,21 +61,26 @@
     // == 结束 ==
 
     // == process 颜色调整 ==
-    .@{ant-prefix}-steps-item-process > .@{ant-prefix}-steps-item-container > .@{ant-prefix}-steps-item-icon {
-        color: var(--steps-item-active-icon-color);
-        background: var(--steps-item-active-icon-bg-color);
-        border-color: var(--steps-item-active-icon-bg-color);
+    .@{ant-prefix}-steps-item-process {
+        > .@{ant-prefix}-steps-item-container {
+            > .@{ant-prefix}-steps-item-icon {
+                color: var(--steps-item-active-icon-color);
+                background: var(--steps-item-active-icon-bg-color);
+                border-color: var(--steps-item-active-icon-bg-color);
+            }
+        }
     }
 
     .@{ant-prefix}-steps-item-wait {
-        > .@{ant-prefix}-steps-item-container > .@{ant-prefix}-steps-item-content > .@{ant-prefix}-steps-item-title {
-            color: var(--steps-item-title-color);
-        }
+        > .@{ant-prefix}-steps-item-container {
+            > .@{ant-prefix}-steps-item-icon {
+                border-color: var(--steps-item-icon-color);
 
-        .@{ant-prefix}-steps-item-icon {
-            border-color: var(--steps-item-icon-color);
-
-            > .@{ant-prefix}-steps-icon {
+                > .@{ant-prefix}-steps-icon {
+                    color: var(--steps-item-title-color);
+                }
+            }
+            > .@{ant-prefix}-steps-item-content > .@{ant-prefix}-steps-item-title {
                 color: var(--steps-item-title-color);
             }
         }
