--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -112,12 +112,14 @@
 
     // == 调整已完成状态以及已完成状态内行高 ==
     .@{ant-prefix}-steps-item-finish {
-        .@{ant-prefix}-steps-item-icon {
-            line-height: 28px;
-            border-color: var(--color-gray-7);
+        > .@{ant-prefix}-steps-item-container {
+            .@{ant-prefix}-steps-item-icon {
+                line-height: 28px;
+                border-color: var(--color-gray-7);
 
-            .@{ant-prefix}-steps-icon {
-                color: var(--color-gray-7);
+                .@{ant-prefix}-steps-icon {
+                    color: var(--color-gray-7);
+                }
             }
         }
     }
