--- a/packages/ui/steps/src/index.less
+++ b/packages/ui/steps/src/index.less
@@ -76,7 +76,7 @@
             > .@{ant-prefix}-steps-item-icon {
                 border-color: var(--steps-item-icon-color);
 
-                > .@{ant-prefix}-steps-icon {
+                .@{ant-prefix}-steps-icon {
                     color: var(--steps-item-title-color);
                 }
             }
@@ -113,7 +113,7 @@
     // == 调整已完成状态以及已完成状态内行高 ==
     .@{ant-prefix}-steps-item-finish {
         > .@{ant-prefix}-steps-item-container {
-            .@{ant-prefix}-steps-item-icon {
+            > .@{ant-prefix}-steps-item-icon {
                 line-height: 28px;
                 border-color: var(--color-gray-7);
 
@@ -137,12 +137,12 @@
         &.@{ant-prefix}-steps-item-finish,
         &.@{ant-prefix}-steps-item-wait {
             > .@{ant-prefix}-steps-item-container[role='button'] {
-                &:hover .@{ant-prefix}-steps-item-icon {
+                &:hover > .@{ant-prefix}-steps-item-icon {
                     background-color: var(--color-brand-1);
                     border-color: var(--color-brand-5);
                 }
 
-                &:active .@{ant-prefix}-steps-item-icon {
+                &:active > .@{ant-prefix}-steps-item-icon {
                     background-color: var(--color-brand-2);
                     border-color: var(--color-brand-7);
                 }
@@ -152,7 +152,7 @@
         &.@{ant-prefix}-steps-item-error {
             > .@{ant-prefix}-steps-item-container[role='button'] {
                 &:hover {
-                    .@{ant-prefix}-steps-item-icon {
+                    > .@{ant-prefix}-steps-item-icon {
                         background-color: var(--color-error-1);
                         border-color: var(--color-error-5);
 
@@ -167,7 +167,7 @@
                     }
                 }
 
-                &:active .@{ant-prefix}-steps-item-icon {
+                &:active > .@{ant-prefix}-steps-item-icon {
                     background-color: var(--color-error-2);
                     border-color: var(--color-error-7);
 
