fix: 调整Spin的样式, 调整Select的Demo文档, 调整Table内Spin换成osui的
Change-Id: I551aa2d17fd1642c5496a8d3434ad910ebe3bc87

--- a/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
+++ b/packages/ui-theme/icloud-theme/patches/antd-vars-patch.less
@@ -106,8 +106,6 @@
 @tag-font-size: @font-size-sm;
 @tag-line-height: 20px;
 
-// Badge
-
 // Radio
 @radio-focus-shadow: 0 0 0 0 transparent;
 @radio-duration: 0;
@@ -169,6 +167,11 @@
 
 // Message
 @message-notice-content-padding: var(--message-notice-content-padding);
+
+// Spin
+@spin-dot-size-sm: 32px;
+@spin-dot-size: 48px;
+@spin-dot-size-lg: 64px;
 
 // 所有的颜色变量map到css vars
 @alert-close-color: var(--alert-close-color);
