fix: 修复acud loading prefix
Change-Id: I8f439085524fc3a2c528a957116c1cb29bb7a908

--- a/packages/ui/spin/src/index.less
+++ b/packages/ui/spin/src/index.less
@@ -1,27 +1,33 @@
-.@{loading-prefix-cls}-begin {
+.acud-loading-begin {
     fill: var(--color-brand-6);
-    stroke: var(--color-brand-6);;
+    stroke: var(--color-brand-6);
 }
 
-.@{loading-prefix-cls}-begin .circle1 {
+.acud-loading-begin .circle1 {
     animation: circle1 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .circle2 {
+
+.acud-loading-begin .circle2 {
     animation: circle2 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .circle3 {
+
+.acud-loading-begin .circle3 {
     animation: circle3 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .circle4 {
+
+.acud-loading-begin .circle4 {
     animation: circle4 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .circle5 {
+
+.acud-loading-begin .circle5 {
     animation: circle5 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .circle6 {
+
+.acud-loading-begin .circle6 {
     animation: circle6 1.8s ease infinite;
 }
-.@{loading-prefix-cls}-begin .frame {
+
+.acud-loading-begin .frame {
     stroke-dashoffset: 900;
     stroke-dasharray: 900 2440;
     animation: frame 1.8s ease infinite;
